2000-10-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/NSInvocation.h: Removed non-standard macros
	* Headers/gnustep/base/behavior.h: Removed unused macro
	CALL_METHOD_IN_CLASS()
	* Source/GSString.m:
	* Source/GSXML.m:
	* Source/NSArchiver.m:
	* Source/NSArray.m:
	* Source/NSAttributedString.m:
	* Source/NSData.m:
	* Source/NSDictionary.m:
	* Source/NSGArray.m:
	* Source/NSGAttributedString.m:
	* Source/NSGCString.m:
	* Source/NSGDictionary.m:
	* Source/NSGeometry.m:
	* Source/NSObject.m:
	* Source/NSPortCoder.m:
	* Source/NSProcessInfo.m:
	* Source/NSRange.m:
	* Source/NSRunLoop.m:
	* Source/NSScanner.m:
	* Source/NSSerializer.m:
	* Source/NSString.m:
	* Source/NSUnarchiver.m:
	* Source/NSUserDefaults.m:
	Updated to move static SEL variable initialisation to +initialize
	methods so that it should (I think) work with the Apple runtime.

2000-10-29  Adam Fedor  <fedor@gnu.org>

	* configure.in: Check for langinfo.
	* Source/GSLocale.m (GSDomainFromDefaultLocale): Return nil
	dict if langinfo info not available.

	* acconfig.h: Add HAVE_DLADDR
	* Headers/gnustep/base/config.h.in: Regenerate.
	* Source/simple-load.h (__objc_dynamic_get_symbol_path): Return
	nil if not HAVE_DLADDR.

2000-10-29  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSString.m: New inline string classes added to avoid calls
	to malloc in some cases.  Changed all deallocation methods to call
	NSDeallocateObject() directy for efficiency.
	* Source/NSString.m: Use new inline string classes for creation of
	strings where we know the length of the data in advaance.

2000-10-28  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* Headers/gnustep/base/NSBundle.h: added ivar.
	* Source/NSBundle.m ([NSBundle +_addFrameworkFromClass:]): new private
	method to parse NSFramework_* classes.
	(_bundle_load_callback): added framework support. Wrap classes in a
	NSValue to avoid implicit initialization.
	([NSBundle +allBundles]): added framework support.